# ssz-universal-verifier

./: .editorconfig  .gitignore  .npmignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_NEW.md  LICENSE  Makefile  PRODUCTION_STATUS.md  README.md  RELEASE.md  RISCV-README.md  dataset_type.json  generate_dataset.js  package-lock.json  package.json  tsconfig.json  uint64.json
.github/: dependabot.yml  markdown-link-check-config.json
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  docs.yml  release.yml  riscv.yml
c-skel/: Makefile  PRODUCTION_READY.md
c-skel/fuzz/: FUZZING.md  Makefile  README.md  RESULTS.md  fuzz_ssz.c  fuzz_ssz_traditional.c  run_24h_fuzz.sh  run_fuzzing.sh
c-skel/fuzz/seeds/: list_with_offset
c-skel/include/: ssz_stream.h
c-skel/misra/: README.md  check_misra.ps1  check_misra.sh
c-skel/src/: hash.c  ssz_stream.c
c-skel/tests/: test_ssz.c
c-skel/valgrind/: README.md  run_valgrind.sh
docs/: API.md  BATTLE_PLAN.md  CICD-SETUP-SUMMARY.md  CICD.md  FORMAL_VERIFICATION.md  INTEGRATION.md  IOT_TESTING.md  OPTION_A_COMPLETE.md  PATH_TO_3M.md  PERFORMANCE.md  PHASE_1_COMPLETE.md  PRODUCTION_FIXES.md  RISCV.md  SECURITY.md  WASM-SETUP-SUMMARY.md  WASM.md
examples/browser/: index.html
native/: binding.gyp  package-lock.json  package.json
native/src/: addon.cc  binding.cc  sha256_fallback.cc  sha256_native.cc  sha256_native.h
rust-skel/: Cargo.toml  Makefile
rust-skel/src/: hash.rs  lib.rs
rust-skel/tests/: integration_test.rs
scripts/: optimize-build.sh  run-all-tests.sh  test-riscv-docker.ps1  test-riscv-docker.sh  test-riscv-qemu.sh
src/: chunker.ts  hash-auto.ts  hash-native.ts  hash-wasm.ts  hash-webcrypto.ts  hash.ts  index.ts  merkle-optimized.ts  merkle-parallel.ts  merkle-worker.ts  merkle.ts  sszParser.ts  types.ts
tests/: aggressive-bench.ts  bench-native.ts  benchmarks-advanced.ts  benchmarks.ts  cross-platform.test.ts  direct-benchmark.ts  extended-vectors.ts  vectors.ts
wasm/: .gitignore  Cargo.toml  README.md  build.ps1  build.sh  package.json
wasm/examples/: demo.html
wasm/src/: hash_simd.rs  lib.rs
zkvm/: STATUS.md
zkvm/risc-zero/: Cargo.toml  README.md
zkvm/risc-zero/host/: Cargo.toml
zkvm/risc-zero/host/src/: main.rs
zkvm/risc-zero/methods/: Cargo.toml  build.rs
zkvm/risc-zero/methods/guest/: Cargo.toml
zkvm/risc-zero/methods/guest/src/: main.rs
