[package]
name = "ssz-stream-verifier"
version = "1.0.0"
edition = "2021"

[lib]
name = "ssz_stream"
path = "src/lib.rs"

[dependencies]
sha2 = { version = "0.10", default-features = false }

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
# no_std compatible: add dependencies here if needed

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
