[package]
name = "ssz-verifier-wasm"
version = "1.0.0"
authors = ["SSZ Universal Verifier Contributors"]
edition = "2021"
description = "WebAssembly bindings for SSZ Universal Verifier"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/ssz-universal-verifier"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
sha2 = { version = "0.10", default-features = false }
web-sys = { version = "0.3", features = ["Crypto", "SubtleCrypto", "CryptoKey"] }

# Optional: smaller allocator for WASM
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for small code size
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Remove panic infrastructure
strip = true        # Strip symbols

[profile.release.package."*"]
opt-level = "z"

[features]
default = ["wee_alloc"]
simd = []           # SIMD optimizations (enable with RUSTFLAGS)

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
