[workspace]
members = ["host", "methods", "methods/guest"]
resolver = "2"

[workspace.dependencies]
risc0-zkvm = { version = "1.2", default-features = false }
risc0-build = "1.2"
bincode = "1.3"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
