[package]
name = "ssz-zkvm-host"
version.workspace = true
edition.workspace = true

[dependencies]
risc0-zkvm = { workspace = true }
ssz-zkvm-methods = { path = "../methods" }
bincode = { workspace = true }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "prove_ssz"
path = "src/main.rs"
